Sudden shutdown if the filebrowser is part of the area layout #45882

Closed
opened 2015-08-23 19:13:52 +02:00 by Tom Pov · 5 comments

System Information
Win10 x64 GTX580 3GB

Blender Version
Broken: a6457f2
Worked: 5668fc0

Short description of error

Exact steps for others to reproduce the error
I've attached a blendfile with described layout. Go in the filebrowser (top-right) to a folder with several images. Then go to the node editor and try to open an image file for object's material or/and for the world shader. Sometimes it works but mostly Blender immediately shuts down.
This happens on Windows and Linux.
Even if you try to change anything in the filebrowser area this error happens.
But, as I said, only when several images are located in the displayed folder in the filebrowser.
Oh, and sometimes the images in the filebrowser aren't displayed until the mouse hoovers over them.

Hm, it's hard to explain, at least for me in my bad English ... hope, it's pretty clear !?

There were some changes concerned the filebrowser between 5668fc0 and a6457f2 ...

Greetings
Tom

BUGtest.blend

**System Information** Win10 x64 GTX580 3GB **Blender Version** Broken: a6457f2 Worked: 5668fc0 **Short description of error** **Exact steps for others to reproduce the error** I've attached a blendfile with described layout. Go in the filebrowser (top-right) to a folder with several images. Then go to the node editor and try to open an image file for object's material or/and for the world shader. Sometimes it works but mostly Blender immediately shuts down. This happens on Windows and Linux. Even if you try to change anything in the filebrowser area this error happens. But, as I said, only when several images are located in the displayed folder in the filebrowser. Oh, and sometimes the images in the filebrowser aren't displayed until the mouse hoovers over them. Hm, it's hard to explain, at least for me in my bad English ... hope, it's pretty clear !? There were some changes concerned the filebrowser between 5668fc0 and a6457f2 ... Greetings Tom [BUGtest.blend](https://archive.blender.org/developer/F227159/BUGtest.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tompov

Added subscriber: @tompov
Bastien Montagne self-assigned this 2015-08-23 20:17:44 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 2ee0187ed2

This issue was referenced by 2ee0187ed25fd1c4f2756a7d2ffd4b29bc9ad637

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45882
No description provided.