Fix T45882: Sudden shutdown if the filebrowser is part of the area layout.

There is no guarantee in sfile's listener that FileList has already been created...